Setup data module

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+import com.paystack.checkout.buildsrc.Libs
+
 buildscript {
     ext.kotlin_version = "1.4.0"
     repositories {
@@ -6,9 +8,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0-rc01"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath Libs.androidGradlePlugin
+        classpath Libs.Kotlin.gradlePlugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
