--- a/checkout/build.gradle
+++ b/checkout/build.gradle
@@ -1,6 +1,16 @@
+import com.paystack.checkout.buildsrc.Libs
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+}
+
+assemble.dependsOn('lint')
+check.dependsOn('checkstyle')
+
+configurations {
+    javadocDeps
+    ktlint
 }
 
 android {
@@ -30,15 +40,26 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    lintOptions {
+        enable "Interoperability"
+    }
 }
 
 dependencies {
+    implementation Libs.Kotlin.stdlib
+    implementation Libs.AndroidX.coreKtx
+    implementation Libs.AndroidX.appcompat
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation Libs.Retrofit.retrofit
+    implementation Libs.Retrofit.moshiConverter
+    implementation Libs.OkHttp.okhttp
+    implementation Libs.OkHttp.loggingInterceptor
+
+//    implementation Libs.Moshi.moshi
+//    implementation Libs.Moshi.moshiCodegen
+
+    testImplementation Libs.junit
+    androidTestImplementation Libs.AndroidX.Test.Ext.junit
+    androidTestImplementation Libs.AndroidX.Test.espressoCore
 }
