--- a/checkout/src/main/AndroidManifest.xml
+++ b/checkout/src/main/AndroidManifest.xml
@@ -2,4 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.paystack.checkout">
 
+    <application>
+        <activity
+            android:name=".ui.CheckoutActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
+    </application>
 </manifest>
