--- a/checkout/src/main/AndroidManifest.xml
+++ b/checkout/src/main/AndroidManifest.xml
@@ -5,6 +5,6 @@
     <application>
         <activity
             android:name=".ui.CheckoutActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
+            android:theme="@style/Theme.PaystackCheckout" />
     </application>
 </manifest>
