--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data android:name="com.paystack.checkout.PublicKey"
+            android:value="pk_test_d8a7e69bada4d0a25d0e62b571b259208c9f4328" />
     </application>
 
 </manifest>
