--- a/javaexample/build.gradle
+++ b/javaexample/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
 
-    implementation(project(":checkout"))
+    implementation(project(':checkout-android'))
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
