--- a/javaexample/src/main/AndroidManifest.xml
+++ b/javaexample/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         </activity>
 
         <meta-data android:name="com.paystack.checkout.PublicKey"
-            android:value="pk_test_d8a7e69bada4d0a25d0e62b571b259208c9f4328" />
+            android:value="pk_test_key" />
     </application>
 
 </manifest>
