Patch: Update ChargeParams and PaymentChannels

--- a/example/src/main/AndroidManifest.xml
+++ b/example/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         </activity>
 
         <meta-data android:name="com.paystack.checkout.PublicKey"
-            android:value="pk_test_key" />
+            android:value="pk_domain_xxxxx" />
     </application>
 
 </manifest>
