Add isCI project env variable to CI gradle executions

--- a/checkout-android/publish.gradle
+++ b/checkout-android/publish.gradle
@@ -63,6 +63,7 @@ artifacts {
 }
 
 // Bintray
+println("isCI=" + System.getenv("isCI"))
 def isCI = System.getenv("isCI") == "true"
 String bintrayUser, bintrayKey
 if (isCI) {
