Disable fail-fast on matrix builds to debug instrumentation test issues
Signed-off-by: Michael obi <michael@paystack.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
     runs-on: macOS-latest
     timeout-minutes: 20
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
         api-level: [21, 23, 26, 29]
     steps:
